# learn-fastapi

./: pyproject.toml  requirements.txt
